--- a/ComercioWebApp/WebContent/resources/css/style.css
+++ b/ComercioWebApp/WebContent/resources/css/style.css
@@ -1,7 +1,3 @@
-.card{
-	top: 15px;
-}
-
 .logo{
 	width: 50px;
   	height: 35px;
@@ -14,4 +10,17 @@
 
 .arquivo {
 	left:5px;
+}
+.jumbotron{
+	margin-top: 10px;
+	padding-top: 10px;
+	top:10px;
+}
+
+button:focus {
+    outline: 0;
+}
+
+.navbar .dropdown-menu .form-control {
+    width: 200px;
 }
